--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -1,3 +1,8 @@
+.waitLoader{
+  ._loading_overlay_overlay{
+    position:fixed !important;
+  }
+}
 
 .headerBar{
   .form-control {
@@ -14,6 +19,14 @@
     .card-text{
       font-size: 1.2em;
     }
+    .viewBtn{
+      cursor:pointer;
+      transition: background-color 0.5s ease;
+      &:hover{
+        background-color:#17a2b8;
+        color: white;
+      }
+    }     
   }
 }
 
@@ -39,14 +52,53 @@
       margin-right: 10px;
       .card-text{
         font-size: 1.2em;
-      }              
+      }             
     }
     .pieGraphCard{
       margin-right: 10px;
       margin-left: 10px;
       .apexcharts-legend{
         text-align:left;
+        .apexcharts-legend-series{
+          display: flex !important;
+          margin-bottom: 10px !important;
+          .apexcharts-legend-marker{
+            width:25px !important;
+            height:25px !important;
+            border-radius:25px !important;
+          }
+          .apexcharts-legend-text{
+            margin-top: auto;
+            margin-bottom: auto;
+            margin-left: 10px;
+            font-size: 1.2rem !important;
+          }
+        }
       }
     }      
   }  
+}
+
+.modal-dialog {
+  .modal-body {
+    max-height: calc(100vh - 200px);
+    overflow-y: auto; 
+    .url{
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;      
+    }
+  }  
+}
+
+.fa-rotate-45 {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.modal-xl{
+  max-width: 85% !important;
 }
